--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <body>
     <!-- === HEADER === -->
     <header class="header">
-      <div class="container header__section">
+      <div class="container header__container">
         <nav class="header__nav">
           <a class="logo logo-header link animate__pulse" href="./index.html"
             ><span class="logo__web">Web</span>Studio</a
@@ -77,8 +77,8 @@
 
     <main>
       <!-- section hero -->
-      <section class="hero">
-        <div class="container hero__container">
+    <section class="hero">
+      <div class="hero__container">
           <h1 class="hero__title">
             Эффективные решения <br />
             для вашего бизнеса
@@ -431,7 +431,7 @@
       </section>
     </main>
     <!-- footer -->
-    <footer class="section section-footer">
+    <footer class="section-footer">
       <!--contact-->
       <div class="container container-footer">
         <div class="adress-footer-box">
