--- a/portfolio.html
+++ b/portfolio.html
@@ -27,7 +27,7 @@
   <body>
     <!-- === HEADER === -->
     <header class="header">
-      <div class="container header__section">
+      <div class="container header__container">
         <nav class="header__nav">
           <a class="logo logo-header link animate__pulse" href="./index.html"
             ><span class="logo__web">Web</span>Studio</a
