--- a/portfolio.html
+++ b/portfolio.html
@@ -29,22 +29,22 @@
     <header class="header">
       <div class="container header__container">
         <nav class="header__nav">
-          <a class="logo logo-header link animate__pulse" href="./index.html"
+          <a class="logo logo-header animate__pulse" href="./index.html"
             ><span class="logo__web">Web</span>Studio</a
           >
           <ul class="header__menu list">
             <li class="header__item animate__pulse">
-              <a class="header__link link" href="./index.html">Студия</a>
+              <a class="header__link" href="./index.html">Студия</a>
             </li>
             <li class="header__item">
               <a
-                class="header__link header__link-curent link"
+                class="header__link header__link-curent"
                 href="./portfolio.html"
                 >Портфолио</a
               >
             </li>
             <li class="header__item">
-              <a class="header__link link" href="">Контакты</a>
+              <a class="header__link" href="">Контакты</a>
             </li>
           </ul>
         </nav>
@@ -52,7 +52,7 @@
         <ul class="header-contact__list list">
           <li class="header-contact__item">
             <a
-              class="header-contact__link link"
+              class="header-contact__link"
               lang="en"
               href="mailto:info@devstudio.com"
             >
@@ -64,7 +64,7 @@
           </li>
 
           <li class="header-contact__item">
-            <a class="header-contact__link link" href="tel:+380961111111">
+            <a class="header-contact__link" href="tel:+380961111111">
               <svg class="header-contact__svg" width="10px" height="16px">
                 <use href="./img/sprite.svg#icon-smartphone"></use>
               </svg>
@@ -112,7 +112,7 @@
 
           <ul class="portfolio-card__list list">
             <li class="portfolio-card__item">
-              <a href="" class="portfolio-card__link link">
+              <a href="" class="portfolio-card__link">
                 <div class="portfolio-card__overlay">
                   <img
                     src="./img/portfolio/img01-laptopscreen.jpg"
@@ -135,7 +135,7 @@
             </li>
 
             <li class="portfolio-card__item">
-              <a href="" class="portfolio-card__link link">
+              <a href="" class="portfolio-card__link">
                 <div class="portfolio-card__overlay">
                   <img
                     src="./img/portfolio/img02-basketball.jpg"
@@ -161,7 +161,7 @@
             </li>
 
             <li class="portfolio-card__item">
-              <a href="" class="portfolio-card__link link">
+              <a href="" class="portfolio-card__link">
                 <div class="portfolio-card__overlay">
                   <img
                     src="./img/portfolio/img03-seafood.jpg"
@@ -186,7 +186,7 @@
             </li>
 
             <li class="portfolio-card__item">
-              <a href="" class="portfolio-card__link link">
+              <a href="" class="portfolio-card__link">
                 <div class="portfolio-card__overlay">
                   <img
                     src="./img/portfolio/img04-earphone.jpg"
@@ -211,7 +211,7 @@
             </li>
 
             <li class="portfolio-card__item">
-              <a href="" class="portfolio-card__link link">
+              <a href="" class="portfolio-card__link">
                 <div class="portfolio-card__overlay">
                   <img
                     src="./img/portfolio/img05-boxesjpg.jpg"
@@ -236,7 +236,7 @@
             </li>
 
             <li class="portfolio-card__item">
-              <a href="" class="portfolio-card__link link">
+              <a href="" class="portfolio-card__link">
                 <div class="portfolio-card__overlay">
                   <img
                     src="./img/portfolio/img06-screen.jpg"
@@ -261,7 +261,7 @@
             </li>
 
             <li class="portfolio-card__item">
-              <a href="" class="portfolio-card__link link">
+              <a href="" class="portfolio-card__link">
                 <div class="portfolio-card__overlay">
                   <img
                     src="./img/portfolio/img07-magazine.jpg"
@@ -286,7 +286,7 @@
             </li>
 
             <li class="portfolio-card__item">
-              <a href="" class="portfolio-card__link link">
+              <a href="" class="portfolio-card__link">
                 <div class="portfolio-card__overlay">
                   <img
                     src="./img/portfolio/img08-label.jpg"
@@ -311,7 +311,7 @@
             </li>
 
             <li class="portfolio-card__item">
-              <a href="" class="portfolio-card__link link">
+              <a href="" class="portfolio-card__link">
                 <div class="portfolio-card__overlay">
                   <img
                     src="./img/portfolio/img09-laptop.jpg"
@@ -344,7 +344,7 @@
       <!--contact-->
       <div class="container container-footer">
         <div class="adress-footer-box">
-          <a class="logo logo-footer link" href="./index.html"
+          <a class="logo logo-footer" href="./index.html"
             ><span class="logo__web">Web</span>
             <span class="logo__studio">Studio</span></a
           >
