--- a/index.html
+++ b/index.html
@@ -29,22 +29,22 @@
     <header class="header">
       <div class="container header__container">
         <nav class="header__nav">
-          <a class="logo logo-header link animate__pulse" href="./index.html"
+          <a class="logo logo-header animate__pulse" href="./index.html"
             ><span class="logo__web">Web</span>Studio</a
           >
           <ul class="header__menu list">
             <li class="header__item animate__pulse">
               <a
-                class="header__link header__link-curent link"
+                class="header__link header__link-curent"
                 href="./index.html"
                 >Студия</a
               >
             </li>
             <li class="header__item">
-              <a class="header__link link" href="./portfolio.html">Портфолио</a>
+              <a class="header__link" href="./portfolio.html">Портфолио</a>
             </li>
             <li class="header__item">
-              <a class="header__link link" href="">Контакты</a>
+              <a class="header__link" href="">Контакты</a>
             </li>
           </ul>
         </nav>
@@ -52,7 +52,7 @@
         <ul class="header-contact__list list">
           <li class="header-contact__item">
             <a
-              class="header-contact__link link"
+              class="header-contact__link"
               lang="en"
               href="mailto:info@devstudio.com"
             >
@@ -64,7 +64,7 @@
           </li>
 
           <li class="header-contact__item">
-            <a class="header-contact__link link" href="tel:+380961111111">
+            <a class="header-contact__link" href="tel:+380961111111">
               <svg class="header-contact__svg" width="10px" height="16px">
                 <use href="./img/sprite.svg#icon-smartphone"></use>
               </svg>
@@ -441,22 +441,22 @@
           >
           <address class="adress-footer">
             <ul class="adress list">
-              <li class="contact-list list">
+              <li class="contact-list">
                 <a
-                  class="contact-map link"
+                  class="contact-map"
                   href="https://goo.gl/maps/kWYsMnAb214LJ1XZ8"
                   target="blank"
                   rel="noopener noreferer"
                   >г. Киев, пр-т Леси Украинки, 26</a
                 >
               </li>
-              <li class="contact-list list">
-                <a class="contact link" href="mailto:info@example.com"
+              <li class="contact-list">
+                <a class="contact" href="mailto:info@example.com"
                   >info@example.com</a
                 >
               </li>
-              <li class="contact-list list">
-                <a class="contact link" href="tel:+380991111111"
+              <li class="contact-list">
+                <a class="contact" href="tel:+380991111111"
                   >+38 099 111 11 11</a
                 >
               </li>
