--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <body>
     <!-- === HEADER === -->
     <header class="header">
-      <div class="container header__container">
+      <!-- <div class="container header__container">
         <nav class="header__nav">
           <a class="logo logo-header animate__pulse" href="./index.html"
             ><span class="logo__web">Web</span>Studio</a
@@ -72,16 +72,14 @@
             </a>
           </li>
         </ul>
-      </div>
+      </div> -->
     </header>
 
     <main>
       <!-- section hero -->
     <section class="hero">
-      <div class="hero__container">
-          <h1 class="hero__title">
-            Эффективные решения <br />
-            для вашего бизнеса
+      <div class="container hero__container">
+          <h1 class="hero__title">Эффективные решения<br/>для вашего бизнеса
           </h1>
           <button
             type="button"
@@ -94,8 +92,8 @@
       </section>
 
       <!-- section the best -->
-      <section class="the-best section">
-        <div class="container">
+      <section class="section">
+        <div class="the-best  container">
           <h2 class="title_hidden">Преимущества</h2>
 
           <ul class="the-best__list list">
@@ -153,7 +151,7 @@
       </section>
 
       <!-- section we do -->
-      <section class="section-we-do section">
+      <!-- <section class="section-we-do section">
         <div class="container">
           <h2 class="section-we-do__title">Чем мы занимаемся</h2>
           <ul class="section-we-do__list list">
@@ -187,10 +185,10 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
 
       <!--section team-->
-      <section class="team section">
+<section class="team section">
         <div class="container">
           <h2 class="team__title">Наша команда</h2>
 
@@ -199,9 +197,7 @@
               <img
                 src="./img/team/igor-dem'yanenko-1.jpg"
                 alt="Игорь Демьяненко"
-                width="270"
-                height="260"
-              />
+               />
               <div class="team__description">
                 <h3 class="team__name">Игорь Демьяненко</h3>
                 <p class="team__txt">Product Designer</p>
@@ -244,8 +240,6 @@
               <img
                 src="./img/team/olha-repina-2.jpg"
                 alt="Ольга Репина"
-                width="270"
-                height="260"
               />
               <div class="team__description">
                 <h3 class="team__name">Ольга Репина</h3>
@@ -287,8 +281,6 @@
               <img
                 src="./img/team/nikolay-tarasov-3.jpg"
                 alt="Николай Тарасов"
-                width="270"
-                height="260"
               />
               <div class="team__description">
                 <h3 class="team__name">Николай Тарасов</h3>
@@ -330,8 +322,6 @@
               <img
                 src="./img/team/mihail-yermakov-4.jpg"
                 alt="Михаил Ермаков"
-                width="270"
-                height="260"
               />
               <div class="team__description">
                 <h3 class="team__name">Михаил Ермаков</h3>
@@ -371,7 +361,7 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
 
       <!--section regular customers-->
       <section class="section customers">
@@ -431,9 +421,9 @@
       </section>
     </main>
     <!-- footer -->
-    <footer class="section-footer">
+    <!-- <footer class="section-footer"> -->
       <!--contact-->
-      <div class="container container-footer">
+      <!-- <div class="container container-footer">
         <div class="adress-footer-box">
           <a class="logo logo-footer link" href="./index.html"
             ><span class="logo__web">Web</span>
@@ -462,10 +452,10 @@
               </li>
             </ul>
           </address>
-        </div>
+        </div> -->
 
         <!--footer-social-->
-        <div class="soc">
+        <!-- <div class="soc">
           <h2 class="soc__title">присоединяйтесь</h2>
           <ul class="soc__list list">
             <li class="soc__item">
@@ -498,10 +488,10 @@
               </a>
             </li>
           </ul>
-        </div>
+        </div> -->
 
         <!-- form subscribe -->
-        <form class="subscribe-form">
+        <!-- <form class="subscribe-form">
           <b class="subscribe-form__title">Подпишитесь на рассылку</b>
           <div class="subscribe-input-btn-box">
             <input
@@ -519,8 +509,8 @@
             </button>
           </div>
         </form>
-      </div>
-    </footer>
+      </div> -->
+    <!-- </footer> -->
 
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
