--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
 
       <!--section regular customers-->
       <section class="section customers">
@@ -421,9 +421,9 @@
       </section>
     </main>
     <!-- footer -->
-    <!-- <footer class="section-footer"> -->
+    <footer class="section-footer">
       <!--contact-->
-      <!-- <div class="container container-footer">
+      <div class="container container-footer">
         <div class="adress-footer-box">
           <a class="logo logo-footer link" href="./index.html"
             ><span class="logo__web">Web</span>
@@ -452,10 +452,10 @@
               </li>
             </ul>
           </address>
-        </div> -->
+        </div>
 
         <!--footer-social-->
-        <!-- <div class="soc">
+        <div class="soc">
           <h2 class="soc__title">присоединяйтесь</h2>
           <ul class="soc__list list">
             <li class="soc__item">
@@ -488,10 +488,10 @@
               </a>
             </li>
           </ul>
-        </div> -->
+        </div>
 
         <!-- form subscribe -->
-        <!-- <form class="subscribe-form">
+        <form class="subscribe-form">
           <b class="subscribe-form__title">Подпишитесь на рассылку</b>
           <div class="subscribe-input-btn-box">
             <input
@@ -509,8 +509,8 @@
             </button>
           </div>
         </form>
-      </div> -->
-    <!-- </footer> -->
+      </div>
+    </footer>
 
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
