--- a/portfolio.html
+++ b/portfolio.html
@@ -26,7 +26,7 @@
 
   <body>
     <!-- === HEADER === -->
-    <header class="header">
+    <!-- <header class="header">
       <div class="container header__container">
         <nav class="header__nav">
           <a class="logo logo-header animate__pulse" href="./index.html"
@@ -72,7 +72,7 @@
             </a>
           </li>
         </ul>
-      </div>
+      </div> -->
     </header>
 
     <main>
