--- a/portfolio.html
+++ b/portfolio.html
@@ -26,8 +26,8 @@
 
   <body>
     <!-- === HEADER === -->
-    <!-- <header class="header">
-      <div class="container header__container">
+    <header class="header">
+      <!-- <div class="container header__container">
         <nav class="header__nav">
           <a class="logo logo-header animate__pulse" href="./index.html"
             ><span class="logo__web">Web</span>Studio</a
