--- a/index.html
+++ b/index.html
@@ -27,27 +27,33 @@
   <body>
     <!-- === HEADER === -->
     <header class="header">
-      <!-- <div class="container header__container">
-        <nav class="header__nav">
-          <a class="logo logo-header animate__pulse" href="./index.html"
-            ><span class="logo__web">Web</span>Studio</a
-          >
-          <ul class="header__menu list">
-            <li class="header__item animate__pulse">
-              <a
-                class="header__link header__link-curent"
-                href="./index.html"
-                >Студия</a
-              >
-            </li>
-            <li class="header__item">
-              <a class="header__link" href="./portfolio.html">Портфолио</a>
-            </li>
-            <li class="header__item">
-              <a class="header__link" href="">Контакты</a>
-            </li>
-          </ul>
-        </nav>
+      <div class="container header__container">
+        <div class="header__mobile">
+          <nav class="header__nav">
+            <a class="logo logo-header animate__pulse" href="./index.html"
+              ><span class="logo__web">Web</span>Studio</a
+            >
+            <ul class="header__menu list">
+              <li class="header__item animate__pulse">
+                <a class="header__link header__link-curent" href="./index.html"
+                  >Студия</a
+                >
+              </li>
+              <li class="header__item">
+                <a class="header__link" href="./portfolio.html">Портфолио</a>
+              </li>
+              <li class="header__item">
+                <a class="header__link" href="">Контакты</a>
+              </li>
+            </ul>
+          </nav>
+
+          <button class="burger-btn" data-menu-open>
+            <svg class="burger-btn__icon">
+              <use href="./img/sprite.svg#icon-burger"></use>
+            </svg>
+          </button>
+        </div>
 
         <ul class="header-contact__list list">
           <li class="header-contact__item">
@@ -72,7 +78,61 @@
             </a>
           </li>
         </ul>
-      </div> -->
+
+        <div class="mobile-menu is-open" data-menu>
+          <div class="container mobile-menu__container">
+            <div class="mobile-menu__up">
+              <button class="mobile-menu__close-btn" data-menu-close>
+                <svg class="mobile-menu__icon">
+                  <use href="./img/sprite.svg#icon-close"></use>
+                </svg>
+              </button>
+              <ul class="mobile-menu__nav-list list">
+                <li class="mobile-menu__item">
+                  <a href="./index.html" class="mobile-menu__link mobile-menu__link_current link">Студия</a>
+                </li>
+                <li class="mobile-menu__item">
+                  <a href="./portfolio.html" class="mobile-menu__link link">Портфолио</a>
+                </li>
+                <li class="mobile-menu__item">
+                  <a href="" class="mobile-menu__link link">Контакты</a>
+                </li>
+              </ul>
+            </div>
+
+            <div class="mobile-menu__down">
+              <ul class="mobile-menu__contact-list list">
+                <li class="mobile-menu__contact-item">
+                  <a class="mobile-menu__contact-link-tel link" href="tel:+380961111111">
+                    +38 096 111 11 11
+                  </a>
+                </li>
+              
+                <li class="mobile-menu__contact-item">
+                  <a class="mobile-menu__contact-link link" lang="en" href="mailto:info@devstudio.com">
+                    info@devstudio.com
+                  </a>
+                </li>
+              </ul>
+              
+              <ul class="mobile-menu__soc-list list">
+                <li class="mobile-menu__soc-item">
+                  <a href="" class="mobile-menu__soc-link link">Instagram </a>
+                </li>
+                <li class="mobile-menu__soc-item">
+                  <a href="" class="mobile-menu__soc-link link">Twitter </a>
+                </li>
+                <li class="mobile-menu__soc-item">
+                  <a href="" class="mobile-menu__soc-link link">Facebook </a>
+                </li>
+                <li class="mobile-menu__soc-item">
+                  <a href="" class="mobile-menu__soc-link link">LinkedIn </a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
     </header>
 
     <main>
@@ -306,7 +366,7 @@
                 <source
                   media="(min-width: 768px)"
                   srcset="
-                    ./img/team/tablet/team2.web 1x,
+                    ./img/team/tablet/team2.web     1x,
                     ./img/team/tablet/team2@2x.webp 2x
                   "
                   type="image/webp"
@@ -314,7 +374,7 @@
                 <source
                   media="(min-width: 768px)"
                   srcset="
-                    ./img/team/tablet/team2.jpg 1x,
+                    ./img/team/tablet/team2.jpg    1x,
                     ./img/team/tablet/team2@2x.jpg 2x
                   "
                 />
@@ -322,7 +382,7 @@
                 <source
                   media="(max-width: 767px)"
                   srcset="
-                    ./img/team/mobile/team2.webp 1x,
+                    ./img/team/mobile/team2.webp    1x,
                     ./img/team/mobile/team2@2x.webp 2x
                   "
                   type="image/webp"
@@ -330,7 +390,7 @@
                 <source
                   media="(max-width: 767px)"
                   srcset="
-                    ./img/team/mobile/team2.jpg 1x,
+                    ./img/team/mobile/team2.jpg    1x,
                     ./img/team/mobile/team2@2x.jpg 2x
                   "
                 />
@@ -805,5 +865,6 @@
     </div>
 
     <script src="./js/modal.js"></script>
+    <script src="./js/menu.js"></script>
   </body>
 </html>
