--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
             <a class="logo logo-header animate__pulse" href="./index.html"><span class="logo__web">Web</span>Studio</a>
             <ul class="header__menu list">
               <li class="header__item animate__pulse">
-                <a class="header__link header__link-curent" href="./index.html">Студия</a>
+                <a class="header__link header__link-curent link" href="./index.html">Студия</a>
               </li>
               <li class="header__item">
-                <a class="header__link" href="./portfolio.html">Портфолио</a>
+                <a class="header__link link" href="./portfolio.html">Портфолио</a>
               </li>
               <li class="header__item">
-                <a class="header__link" href="">Контакты</a>
+                <a class="header__link link" href="">Контакты</a>
               </li>
             </ul>
           </nav>
