--- a/portfolio.html
+++ b/portfolio.html
@@ -81,10 +81,10 @@
               </button>
               <ul class="mobile-menu__nav-list list">
                 <li class="mobile-menu__item">
-                  <a href="./index.html" class="mobile-menu__link mobile-menu__link_current link">Студия</a>
+                  <a href="./index.html" class="mobile-menu__link link">Студия</a>
                 </li>
                 <li class="mobile-menu__item">
-                  <a href="./portfolio.html" class="mobile-menu__link link">Портфолио</a>
+                  <a href="./portfolio.html" class="mobile-menu__link mobile-menu__link_current link">Портфолио</a>
                 </li>
                 <li class="mobile-menu__item">
                   <a href="" class="mobile-menu__link link">Контакты</a>
@@ -895,5 +895,7 @@
         </form>
       </div>
     </footer>
+    <script src="./js/modal.js"></script>
+    <script src="./js/menu.js"></script>
   </body>
 </html>
