--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
           </li>
         </ul>
 
-          <div class="mobile-menu is-open" data-menu>
+          <div class="mobile-menu" data-menu>
             <div class="mobile-menu__container">
               <div class="mobile-menu__up">
                 <button class="mobile-menu__close-btn" data-menu-close>
