--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
       <section class="hero">
         <div class="container hero__container">
           <h1 class="hero__title">
-            Эффективные решения<br />для вашего бизнеса
+            !!!Эффективные решения<br />для вашего бизнеса
           </h1>
           <button
             type="button"
