--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 >
               </li>
               <li class="header__item">
-                <a class="header__link link" href="">Контакты</a>
+                <a class="header__link link" href="./contact.html">Контакты</a>
               </li>
             </ul>
           </nav>
