--- a/contact.html
+++ b/contact.html
@@ -153,20 +153,26 @@
     </header>
     <!-- main -->
     <main>
-      <a href="https://goo.gl/maps/fDwhY38kytED5RTH7" class="link__map"
-        ><span class="logo__web">Web</span>
-        <span class="logo__studio">Studio</span>Чекаємо на вас</a
-      >
-      <iframe
-        class="contact__map-iframe"
-        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2541.7794497406567!2d30.5383858!3d50.426580699999995!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4cf0e033ecbe9%3A0x57a4dffefec77da0!2z0LHRg9C70YzQstCw0YAg0JvQtdGB0ZYg0KPQutGA0LDRl9C90LrQuCwgMjYsINCa0LjRl9CyLCAwMjAwMA!5e0!3m2!1suk!2sua!4v1664014043150!5m2!1suk!2sua"
-        width="600"
-        height="450"
-        style="border: 0"
-        allowfullscreen=""
-        loading="lazy"
-        referrerpolicy="no-referrer-when-downgrade"
-      ></iframe>
+      <div class="container-map">
+        <a
+          class="contact__map-link"
+          href="https://goo.gl/maps/fDwhY38kytED5RTH7"
+          target="blank"
+          rel="noopener noreferer"
+          >Чекаємо на вас</a
+        >
+
+        <iframe
+          class="contact__map-iframe"
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2541.7794497406567!2d30.5383858!3d50.426580699999995!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4cf0e033ecbe9%3A0x57a4dffefec77da0!2z0LHRg9C70YzQstCw0YAg0JvQtdGB0ZYg0KPQutGA0LDRl9C90LrQuCwgMjYsINCa0LjRl9CyLCAwMjAwMA!5e0!3m2!1suk!2sua!4v1664014043150!5m2!1suk!2sua"
+          width="600"
+          height="450"
+          style="border: 0"
+          allowfullscreen=""
+          loading="lazy"
+          referrerpolicy="no-referrer-when-downgrade"
+        ></iframe>
+      </div>
     </main>
     <!-- footer -->
     <footer class="section section-footer">
