--- a/contact.html
+++ b/contact.html
@@ -98,14 +98,16 @@
                   >
                 </li>
                 <li class="mobile-menu__item">
-                  <a
-                    href="./portfolio.html"
-                    class="mobile-menu__link mobile-menu__link_current link"
+                  <a href="./portfolio.html" class="mobile-menu__link link"
                     >Портфолио</a
                   >
                 </li>
                 <li class="mobile-menu__item">
-                  <a href="" class="mobile-menu__link link">Контакты</a>
+                  <a
+                    href="./contact.html"
+                    class="mobile-menu__link mobile-menu__link_current link"
+                    >Контакты</a
+                  >
                 </li>
               </ul>
             </div>
@@ -259,5 +261,7 @@
         </form>
       </div>
     </footer>
+    <script src="./js/modal.js"></script>
+    <script src="./js/menu.js"></script>
   </body>
 </html>
