--- a/index.html
+++ b/index.html
@@ -105,7 +105,9 @@
                   >
                 </li>
                 <li class="mobile-menu__item">
-                  <a href="" class="mobile-menu__link link">Контакты</a>
+                  <a href="./contact.html" class="mobile-menu__link link"
+                    >Контакты</a
+                  >
                 </li>
               </ul>
             </div>
